hphp/test/quick/dv_bs.php.expectf

Fatal error: Default value for parameter a0 with type String needs to have the same type as the type hint bool in %s on line 3
